--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,10 @@ spring.datasource.password=12345678
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
+
+server.servlet.context-path=/api
+
+# Make error responses clearer in API clients
+server.error.include-message=always
+# Optional: disable Whitelabel HTML error page
+server.error.whitelabel.enabled=false
